--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -1,30 +1,30 @@
 .Card {
-    display: flex;
-    flex-direction: column;
-    .image {
-        img {
-           width: 100%;
-           object-fit: cover;
-        }
+  display: flex;
+  flex-direction: column;
+  .image {
+    img {
+      width: 100%;
+      object-fit: cover;
+      object-position: center top;
     }
-    .image__rounded {
-        @extend .image;
-        img {
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
-        }
+  }
+  .image__rounded {
+    @extend .image;
+    img {
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
     }
-    .content {
-        flex-grow: 1;
-        overflow: scroll;
-    }
+  }
+  .content {
+    flex-grow: 1;
+    overflow: scroll;
+  }
 }
 
 .shadow {
-    box-shadow: 0 2px 14px rgba(202,202,202,.5);
+  box-shadow: 0 2px 14px rgba(202, 202, 202, 0.5);
 }
 
 .rounded {
-    border-radius: 15px;
+  border-radius: 15px;
 }
-
